--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,7 @@
       <li><a href="/user-designed-query/home-page">New UDQ </a></li>
       <li><a href="/tce-2384/index">(TCE-2384) VTM ingredients in CDR</a></li>
       <li><a href="/update-redesign/index">Adding new buttons to update screens</a></li>
+      <li><a href="/tce-2523/index">Adding new buttons to update screens</a></li>
     </ul>
   </div>
 </div>
