--- a/templates/tce-2523/index.html
+++ b/templates/tce-2523/index.html
@@ -6,15 +6,12 @@
 
     <ul>
 
-      <li><a href="/tce-2465/update-attribute" class="nhsuk-link nhsuk-link--no-visited-state">Update Attributes</a></li>
-      <li><a href="/tce-2465/update-current-name" class="nhsuk-link nhsuk-link--no-visited-state">Update current name</a></li>
-      <li><a href="/tce-2465/update-unit-dose-detail" class="nhsuk-link nhsuk-link--no-visited-state">Update Unit Dose Detail</a></li>
-      <li><a href="/tce-2465/update-associated-vtms" class="nhsuk-link nhsuk-link--no-visited-state">Update Associated VTMs</a></li>
-      <li><a href="/tce-2465/update-associated-vmp.html" class="nhsuk-link nhsuk-link--no-visited-state">Update Associated VMPs</a></li>
-      <li><a href="/tce-2465/update-code" class="nhsuk-link nhsuk-link--no-visited-state">Update codes</a></li>
-      <li><a href="/tce-2465/update-snomed-code" class="nhsuk-link nhsuk-link--no-visited-state">Update SNOMED code</a></li>
-      <li><a href="/tce-2465/update-ingredients" class="nhsuk-link nhsuk-link--no-visited-state">Update ingredients</a></li>
-      <li><a href="/tce-2465/update-supplier.html" class="nhsuk-link nhsuk-link--no-visited-state">Update supplier</a></li>
+      <li><a href="/tce-2523/amp" class="nhsuk-link nhsuk-link--no-visited-state">AMP</a></li>
+       <li><a href="/tce-2523/ampp" class="nhsuk-link nhsuk-link--no-visited-state">AMPP</a></li>
+       <li><a href="/tce-2523/vmp" class="nhsuk-link nhsuk-link--no-visited-state">VMP</a></li>
+        <li><a href="/tce-2523/vmpp" class="nhsuk-link nhsuk-link--no-visited-state">VMPP</a></li>
+         <li><a href="/tce-2523/supplier" class="nhsuk-link nhsuk-link--no-visited-state">Supplier current</a></li>
+          <li><a href="/tce-2523/supplier" class="nhsuk-link nhsuk-link--no-visited-state">Supplier ideal</a></li>
     </ul>
   </div>
 </div>
