--- a/templates/tce-2523/supplier2.html
+++ b/templates/tce-2523/supplier2.html
@@ -8998,8 +8998,8 @@
                         aria-description="Valid">VAL</span>
                     <!--Extractable-->
 
-                    <span id="sticky-footer-extractable" class="nhsuk-tag nhsuk-tag--yellow"
-                        aria-description="Unextractable">UNEXT</span>
+                        <span id="sticky-footer-extractable" class="nhsuk-tag nhsuk-tag--green"
+                            aria-description="Extractable">EXT</span>
                     <!--Dictionary-->
 
                     <span class="nhsuk-u-margin-left-1">|</span>
