--- a/templates/tce-2523/index.html
+++ b/templates/tce-2523/index.html
@@ -11,7 +11,7 @@
        <li><a href="/tce-2523/vmp" class="nhsuk-link nhsuk-link--no-visited-state">VMP</a></li>
         <li><a href="/tce-2523/vmpp" class="nhsuk-link nhsuk-link--no-visited-state">VMPP</a></li>
          <li><a href="/tce-2523/supplier" class="nhsuk-link nhsuk-link--no-visited-state">Supplier current</a></li>
-          <li><a href="/tce-2523/supplier" class="nhsuk-link nhsuk-link--no-visited-state">Supplier ideal</a></li>
+          <li><a href="/tce-2523/supplier2" class="nhsuk-link nhsuk-link--no-visited-state">Supplier ideal</a></li>
     </ul>
   </div>
 </div>
